--- a/footer.html
+++ b/footer.html
@@ -24,26 +24,26 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!--// STARTLINE & SAY HI //--->
 
     <!-- MUST -->
-        <p class="imp-p" id="footer-text footer-banner">
+        <p id="footer-text footer-banner">
             
-            <a href="https://genialabile.com/live" class="link-live" aria-label="Genialabile Live Home Page">⦿</a>
+            <a href="https://genialabile.com/live" class="link-live" aria-label="Genialabile Live Home Page">◉</a>
             |
-            <a href="https://genialabile.com/contacts" aria-label="Contact & Social">CONTACT</a>
+            <a href="https://genialabile.com/contacts" class="imp-p" aria-label="Contact & Social">CONTACT</a>
             |
-            <a href="https://genialabile.com/accessibility" aria-label="Accessibility">ACCESS</a>
+            <a href="https://genialabile.com/accessibility" class="imp-p" aria-label="Accessibility">ACCESS</a>
             |
-            <a href="https://genialabile.com/cookie-policy" aria-label="Cookie Policy">COOKIE</a>
+            <a href="https://genialabile.com/cookie-policy" class="imp-p" aria-label="Cookie Policy">COOKIE</a>
             |
-            <a href="https://genialabile.com/privacy-policy" aria-label="Privacy Policy">PRIVACY</a>
+            <a href="https://genialabile.com/privacy-policy" class="imp-p" aria-label="Privacy Policy">PRIVACY</a>
             |
-            <a href="https://genialabile.com/terms-and-conditions" aria-label="Terms & Conditions">TERMS</a>
+            <a href="https://genialabile.com/terms-and-conditions" class="imp-p" aria-label="Terms & Conditions">TERMS</a>
             |
             <a href="https://genialabile.com/" class="link-static" aria-label="Genialabile Static Home Page">◎</a>
         </p>
     <!-- MUST -->
     
     <!-- COPY -->
-        <p class="imp-p" id="footer-text footer-banner">
+        <p id="footer-text footer-banner">
             © 2025 Genialabile. All Rights Reserved.
             <!--
             © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
