--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.0
+# Version: v3.0 (160125)
 # URL: https://genialabile.com/index.html
 ===============================================================================
 -->
@@ -77,7 +77,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
 
                 <p>
-                    <h3>
+                    <h3><br>
                         🌱 Began
                     </h3> 
                     <hr class="thin-line">
@@ -89,7 +89,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
 
                 <p>
-                    <h3>
+                    <h3><br>
                         🌍 Global
                     </h3>
                     <hr class="thin-line">
@@ -102,7 +102,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
 
                 <p>
-                    <h3>
+                    <h3><br>
                         🚀 Revolutionary
                     </h3>
                     <hr class="thin-line">
@@ -115,7 +115,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
 
                 <p>
-                    <h3>
+                    <h3><br>
                         🤖 Hybrid
                     </h3>
                     <hr class="thin-line">
@@ -128,7 +128,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
 
                 <p>
-                    <h3>
+                    <h3><br>
                         🎻 Genius
                     </h3>
                     <hr class="thin-line">
